--- a/product-preview-card-component-main/src/index.html
+++ b/product-preview-card-component-main/src/index.html
@@ -23,13 +23,19 @@
     </style>
 </head>
 <body>
-<main class="w-screen h-screen bg-cream flex items-center justify-center">
-    <div class="w-[800px] h-[600px] bg-white flex rounded-2xl overflow-hidden">
-        <div class="h-full w-1/2"><img src="images/image-product-desktop.jpg" alt="perfume image" class="h-full"></div>
-        <div class="p-10 w-1/2 flex flex-col">
-            <span class="mb-6 block font-montserrat tracking-[0.25em] text-lg text-darkGrayishBlue uppercase">Perfume</span>
-            <h2 class="mb-6 font-fraunces text-[40px] leading-none ">Gabrielle Essence Eau De Parfum</h2>
-            <p class="mb-10 font-montserrat text-lg text-darkGrayishBlue"> A floral, solar and voluptuous interpretation
+<main class="p-5 w-screen h-screen bg-cream flex items-center justify-center">
+    <div class="md:w-[800px] h-full md:h-[600px] bg-white flex flex-col md:flex-row rounded-2xl overflow-hidden">
+        <div class="h-auto md:w-1/2">
+            <picture>
+                <source media="(max-width: 767px)" srcset="images/image-product-mobile.jpg">
+                <source media="(min-width: 768px)" srcset="images/image-product-desktop.jpg">
+                <img src="images/image-product-desktop.jpg" alt="perfume image" class="w-full md:h-full">
+            </picture>
+        </div>
+        <div class="h-full p-8 md:p-10 md:w-1/2 flex flex-col">
+            <span class="mb-6 block font-montserrat tracking-[0.25em] text-sm md:text-lg text-darkGrayishBlue uppercase">Perfume</span>
+            <h2 class="mb-6 font-fraunces text-3xl md:text-[40px] leading-none ">Gabrielle Essence Eau De Parfum</h2>
+            <p class="mb-10 font-montserrat text-md md:text-lg text-darkGrayishBlue"> A floral, solar and voluptuous interpretation
                 composed by Olivier Polge,
                 Perfumer-Creator for the House of CHANEL.</p>
             <div class="mt-auto">
@@ -37,7 +43,7 @@
                     <span class="font-fraunces text-[2.5rem] mr-8 text-darkCyan">$149.99</span>
                     <span class="line-through font-montserrat text-darkGrayishBlue">$169.99</span>
                 </div>
-                <button class="w-full bg-darkCyan py-5 flex items-center justify-center rounded-xl">
+                <button class="w-full bg-darkCyan py-5 flex items-center justify-center rounded-xl hover:bg-veryDarkBlue">
                     <img src="images/icon-cart.svg" alt="icon cart" class="w-5 mr-4"> <span
                         class="text-white font-bold text-xl">Add to Cart</span>
                 </button>
@@ -46,9 +52,6 @@
         </div>
     </div>
 </main>
-
-
-Add to Cart
 
 <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
