fixed mobile view, but desktop image is still getting a bit squeezed

--- a/product-preview-card-component-main/src/index.html
+++ b/product-preview-card-component-main/src/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
 <main class="p-5 w-screen h-screen bg-cream flex items-center justify-center">
-    <div class="md:w-[800px] h-full md:h-[600px] bg-white flex flex-col md:flex-row rounded-2xl overflow-hidden">
+    <div class="max-w-[500px] md:max-w-none md:w-[800px] md:h-[600px] bg-white flex flex-col md:flex-row rounded-2xl overflow-hidden">
         <div class="h-auto md:w-1/2">
             <picture>
                 <source media="(max-width: 767px)" srcset="images/image-product-mobile.jpg">
