--- a/qr-code-component-main/src/index.html
+++ b/qr-code-component-main/src/index.html
@@ -27,8 +27,8 @@
     <div class="p-5 rounded-2xl bg-white max-w-[350px]">
         <img src="images/image-qr-code.png" alt="qr code" class="mb-5 rounded-2xl">
         <div class="p-3 text-center">
-            <h2 class="text-[25px] font-bold mb-3">Improve your front-end skills by building projects</h2>
-            <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+            <h2 class="text-[25px] font-bold mb-3 text-darkBlue">Improve your front-end skills by building projects</h2>
+            <p class="text-grayishBlue">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         </div>
     </div>
 </main>
