--- a/interactive-card-details-form-main/src/index.html
+++ b/interactive-card-details-form-main/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   
   <title>Frontend Mentor | Interactive card details form</title>
 
@@ -13,6 +13,8 @@
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+  <link href="./index.css" rel="stylesheet">
+  <script src="index.js" defer></script>
 </head>
 <body>
 
