--- a/interactive-card-details-form-main/src/index.html
+++ b/interactive-card-details-form-main/src/index.html
@@ -1,53 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Interactive card details form</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-  <link href="./index.css" rel="stylesheet">
-  <script src="index.js" defer></script>
+    <title>Frontend Mentor | Interactive card details form</title>
+
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+        .attribution {
+            font-size: 11px;
+            text-align: center;
+        }
+
+        .attribution a {
+            color: hsl(228, 45%, 44%);
+        }
+    </style>
+    <link href="./index.css" rel="stylesheet">
+    <script src="index.js" defer></script>
 </head>
 <body>
+<main>
+    <div class="cards">
+        <div class="card-1">
+            0000 0000 0000 0000
+            Jane Appleseed
+            00/00
+        </div>
+        <div class="card-2">
+            000
+        </div>
+    </div>
+    <div>
+        <form id="credit-card-form">
+            <label>
+                Cardholder Name
+                <input type="text" placeholder="e.g. Jane Appleseed">
+            </label>
+            <label>
+                Card Number
+                <input type="number" placeholder="e.g. 1234 5678 9123 0000">
+            </label>
+            <fieldset>
+                <legend>Exp. Date (MM/YY)</legend>
+                <label for="month">Month</label>
+                <input type="number" id="month" placeholder="MM">
+                <label for="year">Year</label>
+                <input type="number" id="year" placeholder="YY">
+            </fieldset>
+            <label>
+                CVC
+                <input type="number" placeholder="e.g. 123">
+            </label>
+            <button>Confirm</button>
+        </form>
+        <div id="success-message" class="hidden">
+            Thank you!
+            We've added your card details
+            <button id="dismiss-success-message">Continue</button>
+        </div>
+    </div>
+</main>
 
-  0000 0000 0000 0000
-  Jane Appleseed
-  00/00
-
-  000
-
-  Cardholder Name
-  e.g. Jane Appleseed
-
-  Card Number
-  e.g. 1234 5678 9123 0000
-
-  Exp. Date (MM/YY)
-  MM
-  YY
-
-  CVC
-  e.g. 123
-
-  Confirm
-
-  <!-- Completed state start -->
-
-  Thank you!
-  We've added your card details
-  Continue
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+<div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/movileanuv">Victor Movileanu</a>.
+</div>
 </body>
 </html>
