--- a/interactive-card-details-form-main/src/index.html
+++ b/interactive-card-details-form-main/src/index.html
@@ -24,18 +24,30 @@
     <script src="index.js" defer></script>
 </head>
 <body>
-<main>
-    <div class="cards">
+<main class="flex h-screen">
+    <div class="cards flex-none w-[493px]">
         <div class="card-1">
-            0000 0000 0000 0000
-            Jane Appleseed
-            00/00
+            <object data="images/card-logo.svg"></object>
+            <div class="mt-[6.4rem]" id="credit-card-number">
+                <span>0000</span>
+                <span>0000</span>
+                <span>0000</span>
+                <span>0000</span>
+            </div>
+            <div class="flex justify-between mt-[2.4rem]">
+                <div class="" id="credit-card-name">
+                    Jane Appleseed
+                </div>
+                <div id="credit-card-expire">
+                    00/00
+                </div>
+            </div>
         </div>
         <div class="card-2">
-            000
+            <div class="absolute top-[11.1rem] left-[35.8rem]" id="credit-card-cvc">000</div>
         </div>
     </div>
-    <div>
+    <div class="flex-auto">
         <form id="credit-card-form">
             <label>
                 Cardholder Name
