style cards - text

--- a/interactive-card-details-form-main/src/index.html
+++ b/interactive-card-details-form-main/src/index.html
@@ -25,17 +25,17 @@
 </head>
 <body>
 <main class="flex h-screen">
-    <div class="cards flex-none w-[493px]">
+    <div class="cards flex-none w-[493px] text-white text-[1.4rem] tracking-[2px] leading-[1.8rem]">
         <div class="card-1">
             <object data="images/card-logo.svg"></object>
-            <div class="mt-[6.4rem]" id="credit-card-number">
+            <div class="mt-[6.4rem] text-[2.8rem] leading-[3.6rem] tracking-[3.4px]" id="credit-card-number">
                 <span>0000</span>
                 <span>0000</span>
                 <span>0000</span>
                 <span>0000</span>
             </div>
-            <div class="flex justify-between mt-[2.4rem]">
-                <div class="" id="credit-card-name">
+            <div class="flex justify-between mt-[2.2rem]">
+                <div class="uppercase" id="credit-card-name">
                     Jane Appleseed
                 </div>
                 <div id="credit-card-expire">
