--- a/interactive-card-details-form-main/src/index.html
+++ b/interactive-card-details-form-main/src/index.html
@@ -47,28 +47,31 @@
             <div class="absolute top-[11.1rem] left-[35.8rem]" id="credit-card-cvc">000</div>
         </div>
     </div>
-    <div class="flex-auto">
-        <form id="credit-card-form">
-            <label>
+    <div class="flex flex-auto items-center p-[22.7rem]">
+        <form id="credit-card-form" class="flex flex-col ml-auto text-[1.2rem] tracking-[2px] leading-[1.5rem]">
+            <label class="block uppercase mb-[2.6rem]">
                 Cardholder Name
-                <input type="text" placeholder="e.g. Jane Appleseed">
+                <input type="text" placeholder="e.g. Jane Appleseed" class="form-input block w-full mt-[9px] text-[1.8rem]">
             </label>
-            <label>
+            <label class="block uppercase mb-[2.6rem]">
                 Card Number
-                <input type="number" placeholder="e.g. 1234 5678 9123 0000">
+                <input type="number" placeholder="e.g. 1234 5678 9123 0000" class="form-input block w-full mt-[9px] text-[1.8rem]">
             </label>
-            <fieldset>
-                <legend>Exp. Date (MM/YY)</legend>
-                <label for="month">Month</label>
-                <input type="number" id="month" placeholder="MM">
-                <label for="year">Year</label>
-                <input type="number" id="year" placeholder="YY">
-            </fieldset>
-            <label>
-                CVC
-                <input type="number" placeholder="e.g. 123">
-            </label>
-            <button>Confirm</button>
+            <div class="flex mb-[4rem]">
+                <fieldset class="flex">
+                    <legend class="uppercase">Exp. Date (MM/YY)</legend>
+                    <label for="month" class="hidden">Month</label>
+                    <label for="year" class="hidden">Year</label>
+                    <input type="number" min="01" max="12" id="month" placeholder="MM" class="form-input mt-[9px] text-[1.8rem] w-[8rem] mr-[1rem]">
+                    <input type="number" min="22" id="year" placeholder="YY" class="form-input mt-[9px] text-[1.8rem] w-[8rem]">
+                </fieldset>
+                <label class="ml-[2rem]">
+                    CVC
+                    <input type="number" placeholder="e.g. 123" class="form-input mt-[9px] block text-[1.8rem]">
+                </label>
+            </div>
+
+            <button class="w-full py-[1.5rem] px-[15.6rem] bg-veryDarkViolet text-white rounded-[8px]">Confirm</button>
         </form>
         <div id="success-message" class="hidden">
             Thank you!
