--- a/interactive-card-details-form-main/src/index.html
+++ b/interactive-card-details-form-main/src/index.html
@@ -25,45 +25,51 @@
 </head>
 <body>
 <main class="flex h-screen">
-    <div class="cards flex-none w-[493px] text-white text-[1.4rem] tracking-[2px] leading-[1.8rem]">
-        <div class="card-1">
-            <object data="images/card-logo.svg"></object>
-            <div class="mt-[6.4rem] text-[2.8rem] leading-[3.6rem] tracking-[3.4px]" id="credit-card-number">
-                <span>0000</span>
-                <span>0000</span>
-                <span>0000</span>
-                <span>0000</span>
-            </div>
-            <div class="flex justify-between mt-[2.2rem]">
-                <div class="uppercase" id="credit-card-name">
-                    Jane Appleseed
+    <div class="background flex-none w-[493px] flex flex-col justify-center">
+        <div class="cards text-white text-[1.4rem] tracking-[2px] leading-[1.8rem]">
+            <div class="card-1">
+                <object data="images/card-logo.svg"></object>
+                <div class="mt-[6.4rem] text-[2.8rem] leading-[3.6rem] tracking-[3.4px]" id="credit-card-number">
+                    <span>0000</span>
+                    <span>0000</span>
+                    <span>0000</span>
+                    <span>0000</span>
                 </div>
-                <div id="credit-card-expire">
-                    00/00
+                <div class="flex justify-between mt-[2.2rem]">
+                    <div class="uppercase" id="credit-card-name">
+                        Jane Appleseed
+                    </div>
+                    <div id="credit-card-expire">
+                        00/00
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="card-2">
-            <div class="absolute top-[11.1rem] left-[35.8rem]" id="credit-card-cvc">000</div>
+            <div class="card-2">
+                <div class="absolute top-[11.1rem] left-[35.8rem]" id="credit-card-cvc">000</div>
+            </div>
         </div>
     </div>
-    <div class="flex flex-auto items-center p-[22.7rem]">
-        <form id="credit-card-form" class="flex flex-col ml-auto text-[1.2rem] tracking-[2px] leading-[1.5rem]">
+    <div class="flex flex-auto justify-center items-center p-[22.7rem] pl-[34.9rem]">
+        <form id="credit-card-form" class="flex flex-col text-[1.2rem] tracking-[2px] leading-[1.5rem]">
             <label class="block uppercase mb-[2.6rem]">
                 Cardholder Name
-                <input type="text" placeholder="e.g. Jane Appleseed" class="form-input block w-full mt-[9px] text-[1.8rem]">
+                <input type="text" placeholder="e.g. Jane Appleseed"
+                       class="form-input block w-full mt-[9px] text-[1.8rem]">
             </label>
             <label class="block uppercase mb-[2.6rem]">
                 Card Number
-                <input type="number" placeholder="e.g. 1234 5678 9123 0000" class="form-input block w-full mt-[9px] text-[1.8rem]">
+                <input type="number" placeholder="e.g. 1234 5678 9123 0000"
+                       class="form-input block w-full mt-[9px] text-[1.8rem]">
             </label>
             <div class="flex mb-[4rem]">
                 <fieldset class="flex">
                     <legend class="uppercase">Exp. Date (MM/YY)</legend>
                     <label for="month" class="hidden">Month</label>
                     <label for="year" class="hidden">Year</label>
-                    <input type="number" min="01" max="12" id="month" placeholder="MM" class="form-input mt-[9px] text-[1.8rem] w-[8rem] mr-[1rem]">
-                    <input type="number" min="22" id="year" placeholder="YY" class="form-input mt-[9px] text-[1.8rem] w-[8rem]">
+                    <input type="number" min="01" max="12" id="month" placeholder="MM"
+                           class="form-input mt-[9px] text-[1.8rem] w-[8rem] mr-[1rem]">
+                    <input type="number" min="22" id="year" placeholder="YY"
+                           class="form-input mt-[9px] text-[1.8rem] w-[8rem]">
                 </fieldset>
                 <label class="ml-[2rem]">
                     CVC
